<resources>
    <string name="app_name">FarmShields</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;8 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="cosplay_akatsuki_naruto_geek">#cosplay #akatsuki #naruto #geek</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="invalid_password_error">Password must be at least 8 characters</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="toggle_password_visibility_off">Toggle password visibility</string>
    <string name="name">lullydark</string>
    <string name="date">1 sec ago</string>
    <string name="logo">Logo</string>
    <string name="image_profile">Image profile</string>
    <string name="image_post">Image post</string>
    <string name="icon_like">Icon Like</string>
    <string name="icon_comment">Icon Comment</string>
    <string name="icon_share">Icon Share</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="bpost">Post</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="english_us">English (US)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="company_logo">Company Logo</string>
    <string name="usernames">Name</string>
    <string name="invalid_name_error">Name must not be blank</string>
    <string name="register">Sign Up</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="profile_image">Profile Image</string>
    <string name="back">Back</string>
    <string name="more_options">More Options</string>
    <string name="add_image">Add Image</string>
    <string name="add_gif">Add Gif</string>
    <string name="add_poll">Add Poll</string>
    <string name="add_location">Add Location</string>
    <string name="more_actions">More Actions</string>
    <string name="your_followers_can_reply_amp_quote"><![CDATA[Your followers can reply & quote]]></string>
    <string name="post">Post</string>
    <string name="new_thread">New thread</string>
    <string name="raiiardiann">raiiardiann</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="whats_new">What\'s new?</string>
    <string name="preview_image">Preview Image</string>
    <string name="add_camera">Add Camera</string>
    <string name="download_image">Download Image</string>
    <string name="download">Download</string>
    <string name="_700">700</string>
    <string name="_500">500</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="username"></string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="bio">Bio</string>
    <string name="tab_stories">Stories</string>
    <string name="bacot">Bacot</string>
    <string name="appearance">Appearance</string>
    <string name="drk_light"><![CDATA[Dark & Light]]></string>
    <string name="logout">Logout</string>
    <string name="design">Design</string>
    <string name="button_maps">Button Maps</string>
    <string name="back_button">Back Button</string>
    <string name="your_current_location">Post location</string>
    <string name="location">JL. Senayan</string>
    <string name="image_detail_desc">Image Detail</string>
    <string name="close_button_desc">Close Button</string>
    <string name="more_button">More Button</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="Logo">Logo</string>
    <string name="ic_messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="locations">Location</string>
    <string name="hello_blank_fragment_community">Community</string>
    <string name="hello_blank_fragment_notifications">Notifications</string>
    <string name="hello_blank_fragment_profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="eclipse1">eclipse1</string>
    <string name="eclipse2">eclipse 2</string>
    <string name="eclipse3">eclipse 3</string>
    <string name="onboarding">Onboarding Image</string>
    <string name="hapetani">HAPETANI</string>
    <string name="by_hapetani_ltd">By HAPETANI LTD</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="icon_petani">icon petani</string>
    <string name="selamat_datang_di_hapetani">Selamat Datang Di Hapetani</string>
    <string name="wilayah_anda_aman">Wilayah anda aman</string>
    <string name="asisten_petani">Asisten Petani</string>
    <string name="laporkan_hama">Laporkan Hama</string>
    <string name="tanya_paktani">Tanya PakTani</string>
    <string name="_22">22°</string>
    <string name="tangerang_banten">Tangerang, Banten</string>
    <string name="icon_awan">Icon Awan</string>
    <string name="berawan">Berawan</string>
    <string name="icon_serangga">icon serangga</string>
    <string name="icon_petanis">icon petani</string>
    <string name="itunuoluwa_abidoye">Itunuoluwa Abidoye</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="two_factor_authentication">Two-Factor Authentication</string>
    <string name="log_out">Log out</string>
    <string name="about_app">About App</string>
    <string name="image">Image</string>
    <string name="help_support">Help Support</string>
    <string name="more">More</string>
    <string name="my_account">My Account</string>
    <string name="or_login_with">Or Login With</string>
    <string name="google">Google</string>
    <string name="laporan_petani">Laporan Petani</string>
    <string name="add_sign">Add Sign</string>
    <string name="pilih_tanda">Pilih Tanda</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch_error">password didn\'t match</string>
    <string name="send">Kirim</string>
    <string name="masukan_pertyaan">Masukan Pertyaan</string>
    <string name="details">Details</string>
    <string name="descs">Description</string>
    <string name="id_report">ID Report:</string>
    <string name="update">Update</string>
    <string name="ubah">Ubah</string>
    <string name="icon">Icon Camera</string>
    <string name="icon_camera">Icon Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enable_edit">Edit</string>
    <string name="current_location">Current Location</string>
    <string name="locationss">Location</string>
    <string name="names">Name</string>

    <string-array name="sign_array">
        <item>Aman</item>
        <item>Peringatan</item>
        <item>Bahaya</item>
    </string-array>
</resources>

